<resources>
    <string name="app_name">First steps</string>
    <string name="test_string">This is my first string test</string>
    <string name="hello_message">Hello, how are you all?</string>
    <string name="whatever_name">Whatever</string>
    <string name="moe_name">MOE</string>
    <string name="lisa_name">LISA</string>
    <string name="homer_name">HOMERO</string>
    <string name="bart_name">BART</string>
    <string-array name="country_arrays">
        <item>México🇲🇽</item>
        <item>Malaysia 🇲🇾</item>
        <item>United States 🇺🇸</item>
        <item>Indonesia 🇮🇩</item>
        <item>France 🇫🇷</item>
        <item>Italy 🇮🇹</item>
        <item>Singapore 🇸🇬</item>
        <item>New Zealand 🇳🇿</item>
    </string-array>

    <string-array name="avengers_array">
        <item>Thor</item>
        <item>Captain America</item>
        <item>Iron Man</item>
        <item>Spider-Man</item>
    </string-array>

    <string name="avenger_name">Name</string>
    <string name="avenger_phrase">Phrase</string>
    <string name="avenger_alive">Alive</string>
    <string name="avenger_gem">Gem</string>
    <string name="avenger_show">Show</string>
    <string name="gem_yes">Yes</string>
    <string name="gem_no">No</string>
    <string name="avenger_name_result">Name: </string>
    <string name="avenger_phrase_result">Phrase: </string>
    <string name="avenger_end">End</string>

    <!--Email Activity-->
    <string name="login">Login</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="incorrect_password">Password incorrect</string>
    <string name="incorrect_email">Email incorrect</string>
    <string name="success_login">Login</string>
    <string name="success_logout">Logout</string>
    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="action_notification">notification</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="send_button">Send</string>

    <!--Form(ViewPager) Activity-->
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_last_name">Last name cannot be empty</string>
    <string name="sending_info">Sending info</string>
    <string name="hint_last_name">Last name</string>
    <string name="image">Image</string>
    <string name="data">Data</string>
    <string name="name">Name:</string>
    <string name="last_name">Last name:</string>
    <string name="email_show">Email:</string>
    <string name="end">End</string>
    <string name="address">Address</string>
    <string name="empty_address">Address cannot be empty</string>
    <string name="message">Type a message</string>
    <string name="empty_message">Message empty</string>
    <string name="insert_message_to_send">Insert message to send</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="main_character">Character:</string>
    <string name="title">Title:</string>
    <string name="year">Year:</string>
    <string name="zoom">Zoom</string>
    <string name="clockwise">Clockwise</string>
    <string name="fade">Fade</string>
    <string name="blink">Blink</string>
    <string name="move">Move</string>
    <string name="slide">Slide</string>
    <string name="start_job">Start Job</string>
    <string name="stop_job">Stop Job</string>
    <string name="location">Location:</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_acelerometer">AcelerometerActivity</string>
    <string name="camera">Camera</string>
    <string name="media">Media</string>
    <string name="pokemon_id">Pokemon ID</string>
    <string name="starwars_id">Starwars ID</string>
</resources>
