<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".viewPagerFormActivity.ViewPagerActivity">

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_menu"
        android:title="@string/action_notification"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/imageProfile"
                android:icon="@drawable/ic_user_image"
                android:orderInCategory="1"
                android:title="@string/image" />
            <item android:id="@+id/data"
                android:icon="@drawable/ic_man_user"
                android:orderInCategory="2"
                android:title="@string/data"/>
            <item android:id="@+id/email"
                android:title="@string/email"
                android:orderInCategory="3"
                android:icon="@drawable/ic_mail" />
            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:orderInCategory="4"
                android:icon="@drawable/ic_logout" />
        </menu>
    </item>
</menu>