<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profileActivity.ProfileActivity">

    <item
        android:id="@+id/action_notification1"
        android:icon="@drawable/ic_menu"
        android:title="@string/action_notification"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/item1"
                android:icon="@drawable/ic_man_user"
                android:orderInCategory="1"
                android:title="@string/user"/>
            <item android:id="@+id/item2"
                android:icon="@drawable/ic_settings_work_tool"
                android:orderInCategory="2"
                android:title="@string/settings" />
            <item android:id="@+id/item3"
                android:title="@string/logout"
                android:orderInCategory="3"
                android:icon="@drawable/ic_logout" />
        </menu>
    </item>
</menu>