<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goodViewPagerActivity.GoodViewPagerActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerMain"
        android:layout_width="match_parent"
        android:layout_height="343dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonFragmentOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_one"
        android:background="@drawable/general_btn_bg"
        app:layout_constraintEnd_toStartOf="@+id/buttonFragmentTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerMain" />

    <Button
        android:id="@+id/buttonFragmentTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_btn_bg"
        android:text="@string/fragment_two"
        app:layout_constraintEnd_toStartOf="@+id/buttonFragmentThree"
        app:layout_constraintStart_toEndOf="@+id/buttonFragmentOne"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerMain" />

    <Button
        android:id="@+id/buttonFragmentThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/general_btn_bg"
        android:text="@string/fragment_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFragmentTwo"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerMain" />
</android.support.constraint.ConstraintLayout>